--- a/DirectX11 Engine/DirectX11 Engine.vcxproj
+++ b/DirectX11 Engine/DirectX11 Engine.vcxproj
@@ -150,7 +150,8 @@
   <ItemGroup>
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="ErrorLogger.cpp" />
-    <ClCompile Include="KeyboardEvent.cpp" />
+    <ClCompile Include="Keyboard\KeyboardClass.cpp" />
+    <ClCompile Include="Keyboard\KeyboardEvent.cpp" />
     <ClCompile Include="RenderWindow.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="StringConverter.cpp" />
@@ -159,7 +160,8 @@
   <ItemGroup>
     <ClInclude Include="Engine.hpp" />
     <ClInclude Include="ErrorLogger.hpp" />
-    <ClInclude Include="KeyboardEvent.hpp" />
+    <ClInclude Include="Keyboard\KeyboardClass.hpp" />
+    <ClInclude Include="Keyboard\KeyboardEvent.hpp" />
     <ClInclude Include="RenderWindow.hpp" />
     <ClInclude Include="StringConverter.hpp" />
     <ClInclude Include="WindowContainer.hpp" />
