--- a/DirectX11 Engine/DirectX11 Engine.vcxproj
+++ b/DirectX11 Engine/DirectX11 Engine.vcxproj
@@ -148,8 +148,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Graphics\AdapterReader.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="ErrorLogger.cpp" />
+    <ClCompile Include="Graphics\Graphics.cpp" />
     <ClCompile Include="Keyboard\KeyboardClass.cpp" />
     <ClCompile Include="Keyboard\KeyboardEvent.cpp" />
     <ClCompile Include="Mouse\MouseClass.cpp" />
@@ -160,8 +162,11 @@
     <ClCompile Include="WindowContainer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Graphics\AdapterReader.hpp" />
+    <ClInclude Include="Base.hpp" />
     <ClInclude Include="Engine.hpp" />
     <ClInclude Include="ErrorLogger.hpp" />
+    <ClInclude Include="Graphics\Graphics.hpp" />
     <ClInclude Include="Keyboard\KeyboardClass.hpp" />
     <ClInclude Include="Keyboard\KeyboardEvent.hpp" />
     <ClInclude Include="Mouse\MouseClass.hpp" />
