--- a/DirectX11 Engine/DirectX11 Engine.vcxproj
+++ b/DirectX11 Engine/DirectX11 Engine.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Window\WindowContainer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Graphics\ConstantBuffer.hpp" />
     <ClInclude Include="Graphics\ConstantBufferTypes.hpp" />
     <ClInclude Include="Graphics\AdapterReader.hpp" />
     <ClInclude Include="Base.hpp" />
