--- a/DirectX11 Engine/imgui.ini
+++ b/DirectX11 Engine/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=249,82
-Size=318,84
+Pos=395,9
+Size=200,101
+Collapsed=0
+
+[Window][Settings]
+Pos=60,60
+Size=74,54
 Collapsed=0
 
